Add style to weather component

--- a/index.html
+++ b/index.html
@@ -25,6 +25,17 @@
       System.import('app/main')
             .then(null, console.error.bind(console));
     </script>
+
+    <style>
+      body{
+        margin:0;
+      }
+      ul{
+        list-style-type: none;
+        margin:0;
+        padding:0;
+      }
+    </style>
   </head>
   <!-- 3. Display the application -->
   <body>
