Connected to the external weather api

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <script src="node_modules/systemjs/dist/system.src.js"></script>
     <script src="node_modules/rxjs/bundles/Rx.js"></script>
     <script src="node_modules/angular2/bundles/angular2.dev.js"></script>
+
+    <!-- Http library request -->
+    <script src="https://code.angularjs.org/2.0.0-beta.9/http.dev.js"></script>
     <!-- 2. Configure SystemJS -->
     <script>
       System.config({
